k8s/staging/ingress/backend.ingress.staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: backend-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/certificate-name: api-tls
        nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    ingressClassName: nginx
    rules:
        - host: api.staging.eliasdebock.com
          http:
              paths:
                  - path: /platform(/|$)(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: edb-api-staging-service
                            port:
                                number: 9101
                  - path: /webshop(/|$)(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: edb-webshop-api-staging-service
                            port:
                                number: 8000
                  - path: /admin(/|$)(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: edb-admin-api-staging-service
                            port:
                                number: 9102
    tls:
        - hosts:
              - api.staging.eliasdebock.com
          secretName: api-tls
