k8s/staging/ingress/frontend.ingress.staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/certificate-name: app-tls
spec:
    ingressClassName: nginx
    rules:
        - host: app.staging.eliasdebock.com
          http:
              paths:
                  - path: /admin/
                    pathType: Prefix
                    backend:
                        service:
                            name: admin-app-staging-service
                            port:
                                number: 80
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: edb-nx-staging-service
                            port:
                                number: 80
                  - path: /keycloak
                    pathType: Prefix
                    backend:
                        service:
                            name: keycloak-staging
                            port:
                                number: 8443
    tls:
        - hosts:
              - app.staging.eliasdebock.com
          secretName: app-tls
