k8s/staging/ingress/ingress.staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: my-ingress-staging
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
        cert-manager.io/cluster-issuer: letsencrypt-production
spec:
    ingressClassName: nginx
    rules:
        - host: app.staging.eliasdebock.com
          http:
              paths:
                  # Frontend App
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: edb-nx-staging-service
                            port:
                                number: 80
                  # Admin App (Under `/admin`)
                  - path: /admin
                    pathType: Prefix
                    backend:
                        service:
                            name: admin-app-staging-service
                            port:
                                number: 80
        - host: api.staging.eliasdebock.com
          http:
              paths:
                  # API Service
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: edb-api-staging-service
                            port:
                                number: 9101
    tls:
        - hosts:
              - app.staging.eliasdebock.com
              - api.staging.eliasdebock.com
          secretName: staging-tls
