k8s/staging/ingress/keycloak.ingress.staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: keycloak-staging-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
        nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
        cert-manager.io/cluster-issuer: letsencrypt-production
        nginx.ingress.kubernetes.io/proxy-cookie-domain: 'keycloak.staging.eliasdebock.com .staging.eliasdebock.com'

spec:
    ingressClassName: nginx
    rules:
        - host: keycloak.staging.eliasdebock.com
          http:
              paths:
                  - path: /admin
                    pathType: Prefix
                    backend:
                        service:
                            name: keycloak-staging
                            port:
                                number: 8443
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: keycloak-staging
                            port:
                                number: 8443
    tls:
        - hosts:
              - keycloak.staging.eliasdebock.com
          secretName: keycloak-tls-secret
